// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Object Marker Clickable Object Marker 1`] = `
<section>
  

  <a
    class="fd-object-marker fd-object-marker--link"
  >
    
    
    <i
      class="fd-object-marker__icon fd-icon--private"
      role="presentation"
    />
    
    
    <span
      class="fd-object-marker__text"
    >
      Locked
    </span>
    

  </a>
  

  <a
    class="fd-object-marker fd-object-marker--link"
  >
    
    
    <i
      class="fd-object-marker__icon fd-icon--user-edit"
      role="presentation"
    />
    
    
    <span
      class="fd-object-marker__text"
    >
      Unsaved Changes
    </span>
    

  </a>
  


  <div
    dir="rtl"
  >
    
    
    <h4>
      RTL Support
    </h4>
    
    
    <a
      class="fd-object-marker fd-object-marker--link"
    >
      
        
      <i
        class="fd-object-marker__icon fd-icon--private"
        role="presentation"
      />
      
        
      <span
        class="fd-object-marker__text"
      >
        Locked
      </span>
      
    
    </a>
    
    
    <a
      class="fd-object-marker fd-object-marker--link"
    >
      
        
      <i
        class="fd-object-marker__icon fd-icon--user-edit"
        role="presentation"
      />
      
        
      <span
        class="fd-object-marker__text"
      >
        Unsaved Changes
      </span>
      
    
    </a>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object Marker Icon And Text 1`] = `
<section>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      class="fd-object-marker__icon fd-icon--request"
      role="presentation"
    />
    
    
    <span
      class="fd-object-marker__text"
    >
      Request
    </span>
    

  </div>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      class="fd-object-marker__icon fd-icon--favorite"
      role="presentation"
    />
    
    
    <span
      class="fd-object-marker__text"
    >
      Favourite
    </span>
    

  </div>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      class="fd-object-marker__icon fd-icon--flag"
      role="presentation"
    />
    
    
    <span
      class="fd-object-marker__text"
    >
      Flag
    </span>
    

  </div>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      class="fd-object-marker__icon fd-icon--user-edit"
      role="presentation"
    />
    
    
    <span
      class="fd-object-marker__text"
    >
      Draft
    </span>
    

  </div>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      class="fd-object-marker__icon fd-icon--private"
      role="presentation"
    />
    
    
    <span
      class="fd-object-marker__text"
    >
      Locked
    </span>
    

  </div>
  


  <div
    dir="rtl"
  >
    
    
    <h4>
      RTL Support
    </h4>
    
    
    <div
      class="fd-object-marker"
    >
      
        
      <i
        class="fd-object-marker__icon fd-icon--request"
        role="presentation"
      />
      
        
      <span
        class="fd-object-marker__text"
      >
        Request
      </span>
      
    
    </div>
    
    
    <div
      class="fd-object-marker"
    >
      
        
      <i
        class="fd-object-marker__icon fd-icon--favorite"
        role="presentation"
      />
      
        
      <span
        class="fd-object-marker__text"
      >
        Favourite
      </span>
      
    
    </div>
    
    
    <div
      class="fd-object-marker"
    >
      
        
      <i
        class="fd-object-marker__icon fd-icon--flag"
        role="presentation"
      />
      
        
      <span
        class="fd-object-marker__text"
      >
        Flag
      </span>
      
    
    </div>
    
    
    <div
      class="fd-object-marker"
    >
      
        
      <i
        class="fd-object-marker__icon fd-icon--user-edit"
        role="presentation"
      />
      
        
      <span
        class="fd-object-marker__text"
      >
        Draft
      </span>
      
    
    </div>
    
    
    <div
      class="fd-object-marker"
    >
      
        
      <i
        class="fd-object-marker__icon fd-icon--private"
        role="presentation"
      />
      
        
      <span
        class="fd-object-marker__text"
      >
        Locked
      </span>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object Marker Icon Only 1`] = `
<section>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      aria-label="icon for request"
      class="fd-object-marker__icon fd-icon--request"
    />
    

  </div>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      aria-label="icon for favourite"
      class="fd-object-marker__icon fd-icon--favorite"
    />
    

  </div>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      aria-label="icon for flag"
      class="fd-object-marker__icon fd-icon--flag"
    />
    

  </div>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      aria-label="icon for user edit"
      class="fd-object-marker__icon fd-icon--user-edit"
    />
    

  </div>
  

  <div
    class="fd-object-marker"
  >
    
    
    <i
      aria-label="icon for private"
      class="fd-object-marker__icon fd-icon--private"
    />
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object Marker Marker Text 1`] = `
<section>
  

  <div
    class="fd-object-marker"
  >
    
    
    <span
      class="fd-object-marker__text"
    >
      Draft
    </span>
    

  </div>
  

  <div
    class="fd-object-marker"
  >
    
    
    <span
      class="fd-object-marker__text"
    >
      Locked
    </span>
    

  </div>
  

</section>
`;
